@@ -14,6 +14,7 @@ Version 1.0 to be released
 - Added CHtml::activeFileField (Qiang)
 - Added CFileHelper::getMimeType and CFileHelper::getMimeTypeByExtension (Qiang)
 - Refactored UserIdentity generated by yiic webapp (Qiang)
+- Refactored CLinkPager (Qiang)
 - Fixed a bug in CNumberValidator about checking upper limit (Qiang)
 - Fixed a bug in CHtml::dropDownList() which doesn't render the 'name' attribute (Qiang)
 
